add style main title and modified class index.html

--- a/article.html
+++ b/article.html
@@ -12,8 +12,8 @@
 
 <body>
   <div class="container">
-    <h1 class="article-h1">
-      Правила организации отступов: как сделать вёрстку гибкой и не допустить ошибок
+    <h1 class="article-main-title">
+      <b>Правила организации отступов:</b> как сделать вёрстку гибкой и не допустить ошибок
     </h1>
 
     <p class="article-paragraph">
