--- a/article.html
+++ b/article.html
@@ -16,24 +16,24 @@
       <b>Правила организации отступов:</b> как сделать вёрстку гибкой и не допустить ошибок
     </h1>
 
-    <p class="article-paragraph">
+    <p class="article-text">
       Вёрстка должна быть <strong>максимально гибкой</strong>. Даже если заказчик или работодатель говорит, что сайт
       статичный и не будет меняться, всё равно стоит делать так, будто завтра добавят несколько блоков текста, несколько
       элементов или что-то ещё.
     </p>
 
-    <p class="article-paragraph">
+    <p class="article-text">
       Нужно точно знать, <em>как поведут себя блоки при вёрстке, что произойдёт при изменениях</em>. И здесь помогают
       правила организации отступов. Они позволяют легко менять, улучшать и масштабировать вёрстку и берегут вас от
       типичных ошибок.
     </p>
 
-    <div class="article-gray">
-      <h2 class="article-h2">
+    <div class="article-gray article-gray-contents">
+      <h2 class="article-second-title">
         Содержание
       </h2>
 
-      <p class="article-paragraph">
+      <p class="article-text">
         Первая из частей - HTML. Это начальная стадия соблюдения кодстайла, ведь любой сайт вы начинаете писать именно с
         этого языка. Давайте посмотрим на основные правила:
       </p>
@@ -59,97 +59,94 @@
     </div>
 
     <div id="basics">
-      <h3 class="article-h3">Основные принципы работы с отступами</h3>
+      <h3 class="article-third-title">Основные принципы работы с отступами</h3>
 
-      <p class="article-paragraph">
+      <p class="article-text">
         У любого сайта или документа есть так называемый поток — порядок вывода объектов в документе. В вёрстке этот
-        поток
-        идёт сверху вниз, слева направо. Именно поэтому, если какой-то элемент на макете находится справа, он должен в
-        HTML-коде идти последним из своей группы.
+        поток идёт сверху вниз, слева направо. Именно поэтому, если какой-то элемент на макете находится справа, он
+        должен в HTML-коде идти последним из своей группы.
       </p>
 
-      <p class="article-paragraph">
+      <p class="article-text article-blue">
         Исходя из этого, можно сразу сформулировать первый принцип.
       </p>
     </div>
 
     <div id="first_principle">
-      <h3 class="article-h3">
+      <h3 class="article-third-title">
         Отступы задаются от предыдущего элемента к следующему
       </h3>
 
-      <p class="article-paragraph">
+      <p class="article-text">
         Это значит, что в вёрстке нужно стараться использовать CSS-свойства <b>margin-right</b> и <b>margin-bottom</b>,
-        то
-        есть отступ справа и отступ снизу. Проще говоря - избегаем отступов слева и сверху полностью.
+        то есть отступ справа и отступ снизу. Проще говоря - избегаем отступов слева и сверху полностью.
       </p>
 
       <figure class="article-figure">
         <img src="img/1.jpg" alt="Как правильно задавать отступы, — только справа и снизу">
-        <figcaption>
+        <figcaption class="article-figcaption" class="article-figcaption">
           На скриншоте видно, как правильно задавать отступы, — только справа и снизу (показано оранжевым)
         </figcaption>
       </figure>
 
-      <p class="article-paragraph">
+      <p class="article-text">
         Внешние отступы сверху и слева (<b>margin-top</b> и <b>margin-left</b>) заменяются на аналогичные внутренние
         отступы (<b>padding</b>) у родителя элементов.
       </p>
 
       <img class="article-notfigure" src="img/2.jpg" alt="Как правильно задавать отступы, — только слева и сверху">
 
-      <p class="article-paragraph">
+      <p class="article-text">
         Получается, что блок не может сдвигаться благодаря своим отступам, — он делает это только за счёт соседних
         элементов (и сам двигает соседние).
       </p>
     </div>
 
     <div id="second_principle">
-      <h3 class="article-h3">
+      <h3 class="article-third-title">
         Отступы задаются только между соседними элементами в потоке
       </h3>
 
-      <p class="article-paragraph">
+      <p class="article-text">
         Если у блока нет соседа с левой стороны — задавать ему отступ слева нельзя. То же самое касается любой из
         сторон.
       </p>
 
       <img class="article-notfigure" src="img/3.jpg" alt="У обоих блоков задан отступ снизу">
 
-      <p class="article-paragraph">
+      <p class="article-text">
         У обоих задан отступ снизу. Для первого списка это применимо, потому что есть сосед снизу — второй список. А для
         второго, не имеющего такого соседа, — отступа нет.
       </p>
 
       <figure class="article-figure">
         <img src="img/4.jpg" alt="Выпадание отступов">
-        <figcaption>
+        <figcaption class="article-figcaption">
           На скриншоте — выпадение отступов. Отступ есть, но он не увеличивает размер «родителя» с голубым фоном,
-          образуя
-          лишний отступ — типичную ошибку вёрстки.
+          образуя лишний отступ — типичную ошибку вёрстки.
         </figcaption>
       </figure>
     </div>
 
     <div id="third_principle">
-      <h3 class="article-h3">
+      <h3 class="article-third-title">
         Последнему элементу группы нужно обнулять отступ
       </h3>
 
-      <p class="article-paragraph">
+      <p class="article-text">
         Это легко сделать с помощью псевдоклассов в CSS. Например, есть псевдокласс <b>:last-child</b>, который
-        позволяет
-        выбрать последний элемент из группы (например, как в нашем случае: мы найдём последний элемент списка).
+        позволяет выбрать последний элемент из группы (например, как в нашем случае: мы найдём последний элемент
+        списка).
       </p>
 
-      <p class="article-paragraph">
+      <p class="article-text">
         С помощью <b>:last-child</b> мы обнуляем отступ у последнего <b>ul</b>, как показано в примере. Теперь всё
         работает как надо.
       </p>
 
       <img class="article-notfigure" src="img/5.jpg" alt="Обнуление отступа у последнего ul с помощью last-child">
 
-      <p class="article-paragraph">
+      <p class="article-text">
         Чтобы не создавать два селектора, можно написать короче, используя псевдокласс <b>:not</b>. Тут мы буквально
         говорим следующее: «Задай отступ всем ul, но не последнему».
       </p>
@@ -157,15 +154,15 @@
       <img class="article-notfigure" src="img/6.jpg" alt="Использование псевдокласса :not">
     </div>
 
-    <h3 class="article-h3">
+    <h3 class="article-third-title">
       Типичный пример: отступы в карточке
     </h3>
 
-    <p class="article-paragraph">
+    <p class="article-text">
       Рассмотрим типичный пример — реализацию карточки с контентом на сайте. Как здесь лучше поступить?
     </p>
 
-    <p class="article-paragraph">
+    <p class="article-text">
       В нашем примере самая простая карточка: с картинкой, заголовком и описанием. Как правильнее сделать отступы у
       заголовка и описания? На самом деле, всё очень просто: нужно применить принципы, о которых я рассказал.
     </p>
@@ -173,21 +170,20 @@
     <img class="article-notfigure" src="img/7.jpg"
       alt="Пример отступов на карточка с картинкой, с заголовком и описанием">
 
-    <p class="article-paragraph">
+    <p class="article-text">
       Нам достаточно обернуть весь текст карточки в блок и задать блоку внутренний отступ — padding. Так наша вёрстка
       будет соответствовать сразу трём принципам. А чтобы сделать отступ между заголовком и описанием, достаточно просто
       сделать отступ снизу — для заголовка.
     </p>
 
-    <div class="article-gray">
+    <div class="article-gray article-gray-summary">
 
-      <h2 class="article-h2">Итог</h2>
+      <h2 class="article-second-title">Итог</h2>
 
-      <p class="article-paragraph">
+      <p class="article-text">
         Это основные правила организации отступов, которые помогут вам сделать вёрстку качественной и гибкой. Главное —
         начать им следовать. Со временем их соблюдение войдёт в привычку и вы начнёте сразу понимать, где можно
-        допустить
-        ошибку и как её избежать.
+        допустить ошибку и как её избежать.
       </p>
     </div>
   </div>
